styles.css
/* Reset some default browser styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* General body styles */
body {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    line-height: 1.6;
    background-color: #f8f9fa;
}

/* Global link styles */
a {
    color: inherit;
    text-decoration: none;
}

/* Header */
header nav {
    background-color: #EDF2F4;
}

.logo {
    max-width: 6rem;
    height: auto;
}

.card {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.navbar-brand img {
    max-width: 100%;
    height: auto;
}

.tel-number {
    color: #2B2D42;
}

.tel-number:hover {
    color: #8D99AE;
}

.book-now-btn {
    background-color: #2B2D42;
    color: #EDF2F4;
}

.book-now-btn:hover {
    background-color: #8D99AE;
    color: #EDF2F4;
}

.tel-number,
.book-now-btn {
    font-size: .8rem;
    margin-right: 5px;
}

/* Hero */
.banner-bg {
    background-image: url('images/banner.jpg');
    min-height: 500px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Services */
.services {
    padding: 60px 0;
    background-color: #2B2D42;
}

.card {
    background-color: #EDF2F4;
    margin-bottom: 20px;
}

/* Shop-info */

.shop-info {
    background-color: #EDF2F4;
    padding: 60px 0;
}

.logo-info {
    max-width: 14rem;
    height: auto;
}

.shop-info p {
    font-size: 1.1rem;
    color: #2B2D42;
}

.shop-info iframe {
    width: 100%;
}

/* footer */

footer {
    padding-top: 18px;
    background-color: #2B2D42;
}

footer p {
    font-size: .8rem;
    color: #EDF2F4;
}

/* Small devices (576px and up) */
@media (min-width: 576px) {

    .logo {
        max-width: 160px;
    }

    .tel-number,
    .book-now-btn {
    font-size: 1rem;
    margin-right: 10px;
    }

    .logo-info {
        max-width: 18rem;
    }

    .shop-info p {
        font-size: 1.4rem;
    }

    footer p {
        font-size: 1rem;
    }
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {

    .logo {
        max-width: 200px;
    }

    .tel-number,
    .book-now-btn {
    font-size: 1.2rem;
    margin-right: 15px;
    }
}

